add professional exp and about me section

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
           <span class="subtitle">Professional Event Planner</span>
           <p class="sub-subtitle">
             <span class="fa-stack">
-              <i class="fa fa-fw fa-map-marker fa-stack-2x"></i>
+              <i class="fa fa-fw fa-map-marker fa-stack-1x"></i>
             </span>
             Flat 192, Building 22, Cadogan Road, SE18 6YN, UK
           </p>
@@ -42,13 +42,19 @@
           </p>
           <p class="sub-subtitle">
             <span class="fa-stack">
+              <i class="fa fa-fw fa-skype fa-stack-1x"></i>
+            </span>
+            tran.bd7
+          </p>
+          <p class="sub-subtitle">
+            <span class="fa-stack">
               <i class="fa fa-fw fa-envelope-open fa-stack-1x"></i>
             </span>
             <a href="mailto:tran.bd7@gmail.com?Subject=Hello" target="_top">tran.bd7@gmail.com</a>
           </p>
           <p class="sub-subtitle">
             <span class="fa-stack">
-              <i class="fa fa-fw fa-linkedin-square fa-stack-2x"></i>
+              <i class="fa fa-fw fa-linkedin-square fa-stack-1x"></i>
             </span>
             <a href="https://uk.linkedin.com/in/tranbd7">uk.linkedin.com/in/tranbd7</a>
           </p>
@@ -59,8 +65,86 @@
       <section class="main-block">
 
         <h2>
+          <i class="fa fa-star"></i>
+          <span>About Me</span>
+        </h2>
+
+        <div class="blocks">
+          <div class="date">
+          </div>
+          <div class="decorator--no-dot"></div>
+          <div class="details">
+            An exceedingly well-equipped individual with key organizational and motivational skills required for successful event and conference planning. Strong in influencing expertise and getting the best from people as well as being versed in problem solving and communicating at all levels. Strongly committed to pursuing an organization’s goals and objectives and following through to a successful conclusion. A person used to being under pressure and operating to strict timelines and project plans whilst remaining cool and professional at all times.
+          </div>
+        </div>
+      </section>
+
+      <section class="main-block education">
+
+        <h2>
+          <i class="fa fa-graduation-cap"></i>
+          <span>Education</span>
+        </h2>
+
+        <section class="blocks">
+          <div class="date">
+            <span>2013</span>
+            <span>|</span>
+            <span>2014</span>
+          </div>
+          <div class="decorator"></div>
+          <div class="details">
+            <span class="title">MA Event and Conference Management</span>
+            <span class="subtitle">University of Westminster, London, UK</span>
+          </div>
+        </section>
+
+        <section class="blocks">
+          <div class="date">
+            <span>2012</span>
+            <span>|</span>
+            <span>2013</span>
+          </div>
+          <div class="decorator"></div>
+          <div class="details">
+            <span class="title">BA (Hons) Business Management</span>
+            <span class="subtitle">Teesside University, Middlesbrough, UK</span>
+          </div>
+        </section>
+
+        <section class="blocks">
+          <div class="date">
+            <span>2010</span>
+            <span>|</span>
+            <span>2011</span>
+          </div>
+          <div class="decorator"></div>
+          <div class="details">
+            <span class="title">International Advance Diploma - Major in Business</span>
+            <span class="subtitle">Singapore Informatics Business Management Education</span>
+          </div>
+        </section>
+
+        <section class="blocks">
+          <div class="date">
+            <span>2008</span>
+            <span>|</span>
+            <span>2010</span>
+          </div>
+          <div class="decorator"></div>
+          <div class="details">
+            <span class="title">International Diploma - Major in Business</span>
+            <span class="subtitle">Singapore Informatics Business Management Education</span>
+          </div>
+        </section>
+
+      </section>
+
+      <section class="main-block">
+
+        <h2>
           <i class="fa fa-suitcase"></i>
-          <span>Experience</span>
+          <span>Work Experience</span>
         </h2>
 
         <section class="blocks">
@@ -139,39 +223,53 @@
 
       </section>
 
-      <section class="main-block education">
+      <section class="main-block">
 
         <h2>
-          <i class="fa fa-graduation-cap"></i>
-          <span>Education</span>
+          <i class="fa fa-university"></i>
+          <span>Professional Experience</span>
         </h2>
 
         <section class="blocks">
           <div class="date">
             <span>2013</span>
             <span>|</span>
-            <span>2014</span>
+            <span>2015</span>
           </div>
           <div class="decorator"></div>
           <div class="details">
-            <span class="title">MA Event and Conference Management</span>
-            <span class="subtitle">University of Westminster, London, UK</span>
+            <span class="title">Event Coordinator Freelancer</span>
+            <ul>
+              <li>Event / Production Assistant – Chinese Food Festival, London Southbank</li>
+              <li>Event / Production Assistant – Cheese and Wine Festival, London</li>
+              <li>Event Assistant  – Chocolate Festival – Business Design Center, London</li>
+              <li>Event Assistant  – Cambridge Beer Festival, Cambridge</li>
+            </ul>
+            <p>Duties included:</p>
+            <ul>
+              <li>Supported pre and post logistic event strongly along with the organization</li>
+              <li>Managed guest list and observed specific area during the event</li>
+              <li>Assisted and provided information to teammates as well as attendees</li>
+            </ul>
           </div>
         </section>
 
         <section class="blocks">
           <div class="date">
-            <span>2012</span>
+            <span>2011</span>
             <span>|</span>
-            <span>2013</span>
+            <span>2012</span>
           </div>
           <div class="decorator"></div>
           <div class="details">
-            <span class="title">BA (Hons) Business Management</span>
-            <span class="subtitle">Teesside University, Middlesbrough, UK</span>
+            <span class="title">Member of the English Speaking Club at The Youth Culture House</span>
+            <p>MC of the English Speaking Club in SIBME</p>
+            <ul>
+              <li>Worked with club members in activities to improve skills in English</li>
+              <li>Helped coordinate fund raising events for charity with club members</li>
+            </ul>
           </div>
         </section>
-
         <section class="blocks">
           <div class="date">
             <span>2010</span>
@@ -180,21 +278,14 @@
           </div>
           <div class="decorator"></div>
           <div class="details">
-            <span class="title">International Advance Diploma - Major in Business</span>
-            <span class="subtitle">Singapore Informatics Business Management Education</span>
-          </div>
-        </section>
-
-        <section class="blocks">
-          <div class="date">
-            <span>2008</span>
-            <span>|</span>
-            <span>2010</span>
-          </div>
-          <div class="decorator"></div>
-          <div class="details">
-            <span class="title">International Diploma - Major in Business</span>
-            <span class="subtitle">Singapore Informatics Business Management Education</span>
+            <span class="title">Project Leader of Trade Fair Event in SIBME</span>
+            <span class="subtitle">Project Planner of Event at SIBME</span>
+            <p>Halloween Party and Fashion Show Event</p>
+            <ul>
+              <li>Coordinated trade fair events to run smoothly and on schedule</li>
+              <li>Worked collaboratively in a busy team with tight deadlines</li>
+              <li>Succeeded of event raised funded for the learning institution</li>
+            </ul>
           </div>
         </section>
 
